
% ---------------------------------------------------------------------------- %
\section{Changes in version 1.2.10 2015-03-30}{
  \itemize{
    \item \code{findExchangeReact} can now deal with real big matrices (>30.000 columns).
    \item additional example for readProb and writeProb.
    \item modified \code{multiDel} to not use \code{require}
  }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 1.2.9 2014-11-19}{
  \itemize{
    \item fixed a bug in class \code{modelorg} and function \code{addReact} when
          the modelorg object is initially empty
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 1.2.8 2014-08-29}{
  \itemize{
    \item for method \code{optimizeProb} of class \code{modelorg}: if arguments
          \code{lb}, \code{ub} or \code{obj_coef} are of length one, they are used
          for all elements given in \code{react}
    \item function \code{geneDel} returns a more illustrative error message if a gene
          association is malformed
    \item fixed a bug in optimizer which returns the wrong objective value in rare cases
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 1.2.7 2014-06-05}{
  \itemize{
    \item added boolean parameter \code{fldind} to methods \code{optimizeProb}
          and \code{applyChanges} which controls the usage of parameter \code{react}
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 1.2.6 2014-06-04}{
  \itemize{
    \item function \code{findExchReact} gives a propper warning, if no exchange
          reactions can be found and returns \code{NULL} in this case
    \item fixed a bug in function \code{addReact} which accours when more than
          one new gene per reaction is added to the model