@@ -12,6 +12,7 @@
     \item \code{findExchangeReact} can now deal with real big matrices (>30.000 columns).
     \item additional example for readProb and writeProb.
     \item modified \code{multiDel} to not use \code{require}
+    \item \code{doubleFluxDel} had a bug if \code{react1} or \code{react2} contained duplicated entries.
   }
 }
 
